<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="distancia">Distancia</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="rs">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="preencha_valores_validos">Por favor, informe valores válidos</string>
</resources>